--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
 }
 
 .light {
-    height: 60px;
+    height: 100px;
     width: 100px;
     margin-left: 5px;
     margin-top: 5px;
@@ -12,6 +12,6 @@
     background-color: pink;
     cursor: pointer;
     text-align: center;
+    line-height: 100px;
     font-family: Helvetica;
-    padding-top: 40px
 }
